// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > should support maxLength 1`] = `
<div>
  <input
    class="rc-input"
    type="text"
  />
</div>
`;

exports[`Input allowClear > should change type when click 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      allowclear="true"
      class="rc-input"
      type="text"
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
      
    </span>
  </span>
</div>
`;

exports[`Input allowClear > should change type when click 2`] = `
<div>
  <span
    class="rc-input-affix-wrapper rc-input-focused"
  >
    <input
      allowclear="true"
      class="rc-input"
      type="text"
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
      
    </span>
  </span>
</div>
`;

exports[`Input allowClear > should not show icon if defaultValue is undefined or empty string 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      allowclear="true"
      class="rc-input"
      type="text"
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
      
    </span>
  </span>
</div>
`;

exports[`Input allowClear > should not show icon if defaultValue is undefined or empty string 2`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      allowclear="true"
      class="rc-input"
      defaultvalue=""
      type="text"
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
      
    </span>
  </span>
</div>
`;

exports[`Input allowClear > should not show icon if value is undefined or empty string 1`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      allowclear="true"
      class="rc-input"
      type="text"
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
      
    </span>
  </span>
</div>
`;

exports[`Input allowClear > should not show icon if value is undefined or empty string 2`] = `
<div>
  <span
    class="rc-input-affix-wrapper"
  >
    <input
      allowclear="true"
      class="rc-input"
      type="text"
    />
    <span
      class="rc-input-suffix"
    >
      <span
        class="rc-input-clear-icon rc-input-clear-icon-hidden"
        role="button"
        tabindex="-1"
      >
        ✖
      </span>
      
    </span>
  </span>
</div>
`;
